--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web service for an edtech solution",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/AccontableDevelopers/TutorNestBackend/issues"
   },
-  "homepage": "https://github.com/AccontableDevelopers/TutorNestBackend#readme"
+  "homepage": "https://github.com/AccontableDevelopers/TutorNestBackend#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.3",
+    "validator": "^13.11.0"
+  }
 }
