--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-session": "^1.18.0",
@@ -41,6 +41,9 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oidc": "^0.1.0",
     "passport-twitter": "^1.0.4",
+    "peerjs": "^1.5.2",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "keywords": []
